Movinf left and right

--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
                 <div class="col c4">
                     <canvas id="grid" width="0" height="0"></canvas>
                 </div>
+                <div class="col c4"><p>&nbsp;</p>
+                </div>
                 <div class="col c4">
-                    <p>Next</p>
+                    <p>Next: <div id="details"></div></p>
                     <canvas id="next" width="0" height="0"></canvas>
+                    <p><span id="traceKeyCode"></span></p>
                 </div>
             </div>
         </div>
