Only minor glitches

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     <p>Next: <div id="details"></div></p>
                     <canvas id="next" width="0" height="0"></canvas>
                     <p><span id="traceKeyCode"></span></p>
+                    <button id="stop">Stop</button>
                 </div>
             </div>
         </div>
