--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div class="col c4">
                     <p>Next: <div id="details"></div></p>
                     <canvas id="next" width="0" height="0"></canvas>
-                    <p><span id="traceKeyCode"></span></p>
+                    <p>Total lines: <span id="total"></span></p>
                     <button id="stop">Stop</button>
                 </div>
             </div>
