--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-        <script type="text/javascript" src="/brython.js"></script>
-        <script type="text/javascript" src="/brython_stdlib.js"></script>
-        <script type="text/python" src="/blocks.py" ></script>
+        <script type="text/javascript" src="./brython.js"></script>
+        <script type="text/javascript" src="./brython_stdlib.js"></script>
+        <script type="text/python" src="./blocks.py" ></script>
         <title>Blocks in Brython</title>
-		<link href="//mincss.com/entireframework.min.css" rel="stylesheet" type="text/css">
+		<link href="./entireframework.min.css" rel="stylesheet" type="text/css">
 	</head>
     <body onload="brython(1)">
     		<nav class="nav" tabindex="-1" onclick="this.focus()">
