--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
     		<nav class="nav" tabindex="-1" onclick="this.focus()">
 			<div class="container">
 				<a class="pagename current" href="#">Blocks in Brython</a>
+				<a href="https://github.com/bmsleight/brython-blocks">Source Code</a>
 				<a href="https://www.barwap.com/projects/">Barwap.com</a>
 			</div>
 		</nav>
 		<button class="btn-close btn btn-sm">×</button>
 		<div class="container">
             <p>An attempt to have blocks running, from the browser using Python</p>
+            <p>Controls are arrow keys or WASF</p>
         </div>
 		<div class="container">
             <div class="row">
