--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 		</nav>
 		<button class="btn-close btn btn-sm">×</button>
 		<div class="container">
-            <p>An attempt to have blocks running, from the browser using Python</p>
-            <p>Controls are arrow keys or WASF</p>
+            <p>An attempt to have blocks running, from the browser using Brython, 
+               Controls are arrow keys or WASF</p>
         </div>
 		<div class="container">
             <div class="row">
