brython_modules.js - http://brython.info/static_doc/en/import.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
         <script type="text/javascript" src="./brython.js"></script>
-        <script type="text/javascript" src="./brython_stdlib.js"></script>
+        <script type="text/javascript" src="./brython_modules.js"></script>
         <script type="text/python" src="./blocks.py" ></script>
         <title>Blocks in Brython</title>
 		<link href="./entireframework.min.css" rel="stylesheet" type="text/css">
