--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                 <div class="col c4"><p>&nbsp;</p>
                 </div>
                 <div class="col c4">
-                    <p>Next: <div id="details"></div></p>
+                    <p>Next block: <div id="details"></div></p>
                     <canvas id="next" width="0" height="0"></canvas>
                     <p>Total lines: <span id="total"></span></p>
-                    <button id="stop">Stop</button>
+                    <button id="stop" class="btn btn-sm btn-c">Stop</button>
                 </div>
             </div>
         </div>
